--- a/index.html
+++ b/index.html
@@ -4,6 +4,15 @@
     <meta charset="UTF-8">
     <meta name="yandex-verification" content="17e66f9543414615">
     <title>ТОП-12 онлайн-казино России 2025: рейтинг казино на реальные деньги</title>
+
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-6JRTLZXW90"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-6JRTLZXW90', {'page_path': window.location.pathname});
+    </script>
 </head>
 <body>
     <h1>ТОП-12 онлайн-казино России 2025 года</h1>
