--- a/index.html
+++ b/index.html
@@ -1,9 +1,8 @@
-<!DOCTYPE html>
-<html lang="ru">
 <head>
-    <meta charset="UTF-8">
-    <meta name="yandex-verification" content="17e66f9543414615">
-    <title>ТОП-12 онлайн-казино России 2025: рейтинг казино на реальные деньги</title>
+<meta charset="UTF-8">
+<meta name="yandex-verification" content="17e66f9543414615">
+<title>ТОП-12 онлайн-казино России 2025: рейтинг казино на реальные деньги</title>
+<meta name="description" content="Рейтинг онлайн‑казино России 2025: проверенные сайты на рубли с бонусами за регистрацию, бездепами и быстрым выводом на карты и кошельки. Сравните условия и выберите площадку.">
 
     <!-- Google tag (gtag.js) -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-6JRTLZXW90"></script>
@@ -15,11 +14,19 @@
     </script>
 </head>
 <body>
+     <p><strong>Навигация по странице:</strong></p>
+    <ul>
+      <li><a href="#rating">Рейтинг онлайн‑казино</a></li>
+      <li><a href="#bonuses">Бонусы и бездепозитные акции</a></li>
+      <li><a href="#fast-payouts">Казино с быстрым выводом</a></li>
+      <li><a href="#mobile">Мобильные онлайн‑казино</a></li>
+      <li><a href="#faq">Частые вопросы игроков</a></li>
+    </ul>
     <h1>ТОП-12 онлайн-казино России 2025 года</h1>
 
    <p>Онлайн-казино на реальные деньги в 2025 году остаются одним из самых востребованных способов развлечения у игроков из России и СНГ. Всё чаще ищут честные онлайн-казино с бонусом за регистрацию, бездепозитными фриспинами и быстрым выводом выигрышей на банковские карты, СБП и электронные кошельки. Ниже приведён актуальный рейтинг лучших онлайн-казино 2025 года на рубли и разбор основных направлений: бонусы, бездепы, мобильная игра, лицензия и скорость выплат.</p>
 
-    <h2>Рейтинг онлайн-казино</h2>
+     <h2 id="rating">Рейтинг онлайн-казино</h2>
 
     <ol>
       <li>✅
@@ -107,21 +114,34 @@
       </li>
     </ol>
 
-    <h2>Бонусы за регистрацию и фриспины</h2>
-
+    <h2 id="bonuses">Бонусы за регистрацию и фриспины</h2>
     <p>Онлайн-казино с бонусами за первый депозит и фриспинами позволяют начать игру даже с небольшого банкролла. Важно смотреть не только на размер бонуса, но и на вейджер, ограничения по ставке и максимальный вывод с бонусных средств.</p>
 
     <p>BEEF CASINO даёт до +250% и до 600 фриспинов плюс 100 FS по SWOPX, что подходит тем, кто хочет мощный стартовый буст. JETTON CASINO предлагает до 350% + 250 FS и колесо с призами до 1000 долларов, что удобно для любителей агрессивных бонусных программ. KUSH CASINO рассчитано на игроков, которым важны фриспины: пакет до 225% и 900 FS плюс 100 FS по SWOPX. MARTIN CASINO распределяет бонусы по нескольким депозитам, что удобно тем, кто вносит деньги поэтапно и не любит «всё сразу».</p>
 
-    <h2>Онлайн-казино с быстрым выводом на карту</h2>
+    <h2 id="fast-payouts">Онлайн-казино с быстрым выводом на карту</h2>
 <p>Игроки часто ищут онлайн-казино с быстрым выводом на карту и электронные кошельки. Важно, чтобы выплаты проходили за несколько минут или часов после проверки, без скрытых комиссий и задержек.</p>
 <p>JETTON CASINÒ и MOTOR CASINÒ делают акцент на скорости кэш-аута и поддерживают популярные методы вывода для игроков из России и СНГ.</p>
 
-<h2>Онлайн-казино с бездепозитным бонусом</h2>
+<h2 id="no-deposit">Онлайн-казино с бездепозитным бонусом</h2>
 <p>Бездепозитный бонус в онлайн-казино и фриспины за регистрацию позволяют протестировать площадку без вложений, но почти всегда сопровождаются повышенным вейджером и ограничениями по слотам.</p>
 <p>RETRO CASINÒ с 200 фриспинами без депозита и промокоды SWOPX200 / SWOPX1000 / SWOPX5000 хорошо закрывают запросы по бездепам и бесплатным вращениям.</p>
 
-<h2>Мобильные онлайн-казино на реальные деньги</h2>
+    <h2 id="mobile">Мобильные онлайн-казино на реальные деньги</h2>
 <p>Часть аудитории полностью играет с телефона, поэтому важны стабильная мобильная версия и удобная касса. BEEF CASINÒ, WINITY CASINÒ и R7 CASINÒ адаптированы под мобильные устройства и позволяют полноценно играть и выводить выигрыши со смартфона.</p>
+
+<h2 id="faq">Частые вопросы об онлайн‑казино 2025</h2>
+
+    <h3>Как выбрать надежное онлайн‑казино на реальные деньги?</h3>
+    <p>Смотрите на наличие лицензии, отзывы игроков, скорость выплат, ограничение по ставкам и валюту счёта. Надёжные площадки поддерживают рубли, вывод на карты и СБП, а условия бонусов прописаны открыто.</p>
+
+    <h3>Что такое вейджер и как он влияет на вывод выигрыша?</h3>
+    <p>Вейджер — это коэффициент отыгрыша бонуса. Например, при вейджере x30 нужно сделать ставок на сумму, в 30 раз превышающую размер бонуса, прежде чем деньги станут доступны для вывода.</p>
+
+    <h3>Какие онлайн‑казино подходят для игры с телефона?</h3>
+    <p>Для мобильной игры выбирайте казино с адаптивной версткой сайта или отдельным приложением. Важно, чтобы через смартфон были доступны те же бонусы, методы пополнения и вывода, что и с ПК.</p>
+
+    <h3>Насколько безопасно играть в онлайн‑казино из России и СНГ?</h3>
+    <p>Риски всегда есть, поэтому используйте только проверенные площадки, включайте двухфакторную аутентификацию, не делитесь паролями и внимательно проверяйте адреса зеркал, чтобы не попасть на фишинговые сайты.</p>
 </body>
 </html>
