--- a/index.html
+++ b/index.html
@@ -146,8 +146,8 @@
     
     <h2>Специальные рейтинги</h2>
 <ul>
-    <li><a href="/bezdep-2025/">ТОП бездепозитных бонусов 2025</a></li>
-    <li><a href="/vyvod-2025/">Казино с быстрым выводом денег</a></li>
+    <li><a href="/casino-top-2025/bezdep-2025.html">ТОП бездепозитных бонусов 2025</a></li>
+    <li><a href="/casino-top-2025/vyvod-2025.html">Казино с быстрым выводом денег</a></li>
 </ul>
 </body>
 </html>
