--- a/bezdep-2025.html
+++ b/bezdep-2025.html
@@ -75,8 +75,14 @@
     </blockquote>
     
     <h2>Полный рейтинг всех казино 2025</h2>
-    <p>Подробнее про быстрый вывод, турниры и мобильную версию — в <a href="/">главном рейтинге ТОП-12</a>.</p>
-    <p>Специально про быстрый вывод: <a href="/vyvod-2025/">Казино с быстрым выводом денег</a>.</p>
+<p>Подробнее про быстрый вывод, турниры и мобильную версию —
+   <a href="https://snow-commit.github.io/casino-top-2025/">главном рейтинге ТОП-12</a>.
+</p>
+<p>Специально про быстрый вывод:
+   <a href="https://snow-commit.github.io/casino-top-2025/vyvod-2025.html">
+     Казино с быстрым выводом денег
+   </a>.
+</p>
     
     <h2>Ответственная игра</h2>
     <p>Азартные игры доступны лицам старше 18 лет. Играйте ответственно. Если нужна помощь — звоните на горячую линию: 8-800-2000-122.</p>
