--- a/vyvod-2025.html
+++ b/vyvod-2025.html
@@ -8,6 +8,13 @@
     <meta name="description" content="ТОП онлайн-казино России 2025 с быстрым выводом денег: СБП до 5 минут, карты 1–24 часа, кошельки мгновенно. Лимиты, верификация, отзывы.">
 </head>
 <body>
+
+    <p>
+  <a href="/casino-top-2025/">Главная ТОП-12</a> ·
+  <a href="/casino-top-2025/bezdep-2025.html">Бездепы</a> ·
+  <a href="/casino-top-2025/vyvod-2025.html">Быстрый вывод</a>
+</p>
+    
     <h1>ТОП казино России 2025: быстрый вывод на карты и СБП</h1>
     
     <p>В 2025 году скорость вывода денег стала главным критерием выбора казино для игроков из России. Большинство площадок обещают «мгновенные выплаты», но по факту разница огромная: от 5 минут по СБП до 3–7 дней ожидания.</p>
