--- a/index.html
+++ b/index.html
@@ -161,6 +161,7 @@
   <li><a href="/casino-top-2025/bezdep-2025.html">ТОП бездепозитных бонусов 2025</a></li>
   <li><a href="/casino-top-2025/vyvod-2025.html">Казино с быстрым выводом денег</a></li>
   <li><a href="/casino-top-2025/mobile-2025.html">Мобильные онлайн‑казино 2025</a></li>
+  <li><a href="/casino-top-2025/license-2025.html">Лицензированные онлайн‑казино 2025</a></li>
 </ul>
   
 </body>
