--- a/new-2025.html
+++ b/new-2025.html
@@ -75,4 +75,21 @@
   <li>Внимательно читайте условия бонусов: вейджер, лимиты и запрещённые игры.</li>
 </ol>
 
-<h2>Полный рейтинг
+<h2>Полный рейтинг всех казино 2025</h2>
+<p>Основной ТОП-12 онлайн-казино России 2025 доступен на
+   <a href="https://snow-commit.github.io/casino-top-2025/">
+     главной странице рейтинга
+   </a>.
+</p>
+<p>Дополнительно смотрите спец-рейтинги:
+   <a href="https://snow-commit.github.io/casino-top-2025/bezdep-2025.html">бездепы</a>,
+   <a href="https://snow-commit.github.io/casino-top-2025/vyvod-2025.html">быстрый вывод</a>,
+   <a href="https://snow-commit.github.io/casino-top-2025/mobile-2025.html">мобильные казино</a>,
+   <a href="https://snow-commit.github.io/casino-top-2025/license-2025.html">лицензированные казино</a>.
+</p>
+
+<h2>Ответственная игра</h2>
+<p>Новые казино часто мотивируют играть активнее за счёт крупных бонусов. Важно заранее задать лимиты по депозитам и ставкам и не пытаться отыгрывать крупные проигрыши.</p>
+
+</body>
+</html>
