--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
   <li><a href="/casino-top-2025/vyvod-2025.html">Казино с быстрым выводом денег</a></li>
   <li><a href="/casino-top-2025/mobile-2025.html">Мобильные онлайн‑казино 2025</a></li>
   <li><a href="/casino-top-2025/license-2025.html">Лицензированные онлайн‑казино 2025</a></li>
+  <li><a href="/casino-top-2025/new-2025.html">Новые онлайн‑казино 2025</a></li>
 </ul>
   
 </body>
